--- a/src/components/LandingPage/Event/EventBanner.css
+++ b/src/components/LandingPage/Event/EventBanner.css
@@ -82,7 +82,10 @@
     position: absolute;
     z-index: 30;
     height: 80vh;
-    margin-left: 5.2rem;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     margin-top: 20vh;
 }
 
