--- a/src/components/LandingPage/Brand/Brand.css
+++ b/src/components/LandingPage/Brand/Brand.css
@@ -1,13 +1,9 @@
-.outer-brand{
-    background-color: white;
-    height: 45vw;
-    padding-top: 5vw;
-    overflow: hidden;
-}
 .main-brand-div{
     background-color:#4329E8;
     color:white; 
-    height: 40vw;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
 }
 .brand-content{
     padding:4vw 8vw;
@@ -19,10 +15,10 @@
     font-weight: bolder;
 }
 .teapot{
-    width:40vw;
+    width:36vw;
     position:absolute;
-    right:-5vw;
-    top:-8vw
+    right:0vw;
+    top:0vw
 }
 .colors{
     position:absolute;
