--- a/src/components/LandingPage/Prizes/Prizes.css
+++ b/src/components/LandingPage/Prizes/Prizes.css
@@ -1,5 +1,10 @@
 .prizes-div{
-    margin: 20vw;
+    height : 100vh;
+    width : 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 .prizes-heading{
