added responsiveness to register,covid and flashback components

--- a/src/components/LandingPage/Flashback/Flashback.css
+++ b/src/components/LandingPage/Flashback/Flashback.css
@@ -13,9 +13,11 @@
 #Flashback__leftcontainer {
     display : flex;
     flex-direction : column;
+    align-items: center;
     width : 35vw;
     padding-top : 30px;
     padding-left : 30px;
+    padding-right: 30px;
 }
 
 #Flashback__leftcontainer h4 {
