--- a/src/components/LandingPage/Brand/Brand.css
+++ b/src/components/LandingPage/Brand/Brand.css
@@ -67,11 +67,10 @@
     
 }
 
-@media screen and (max-width : 756px) {
+@media screen and (max-width : 860px) {
     #brand-img {
-        position: absolute;
-        top : 40px;
-        right : -90px;
+        top : 70px;
+        right : -120px;
         height : 110vh;
         width : auto;
         margin : 0;
@@ -79,7 +78,7 @@
     .brand-content{
         padding:4vw 8vw;
         width:80vw;
-        font-size:1.2rem;
+        font-size:1.25rem;
     }
     .brand-head{
         font-size: 3.1rem;
@@ -89,21 +88,51 @@
 }
 
 @media screen and (max-width : 670px) {
+    .main-brand-div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     #brand-img {
-        top : 50px;
-        right : -120px;
-        height : 110vh;
-        width : auto;
-        margin : 0;
+        position: relative;
+        height : 85vh;
+        right : 0;
+        top :-20px;
     }
-    .brand-content{
-        padding:4vw 8vw;
-        width:90vw;
-        font-size:1.2rem;
+    .brand-content {
+        width : fit-content;
+        padding : 10px 20px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        font-size: 1.45rem;
     }
-    .brand-head{
-        font-size: 3.1rem;
-        font-weight: bolder;
-        line-height: normal;
+}
+
+@media screen and (max-width : 530px) {
+    .brand-head {
+        font-size: 2.5rem;
+    }
+    .brand-content {
+        font-size: 1.35rem;
+    }
+    #brand-img {
+        width : 100vw;
+        right : -40px;
+        height : auto;
+        position: absolute;
+        top : 40vh;
+    }
+}
+
+@media screen and (max-width : 530px) and (max-height : 900px ) {
+    #brand-img {
+        width : 130vw;
+        right : -40px;
+        height : auto;
+        position: absolute;
+        top : 50vh;
     }
 }
