--- a/src/components/LandingPage/Prizes/Prizes.css
+++ b/src/components/LandingPage/Prizes/Prizes.css
@@ -6,14 +6,16 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 0 20px;
     padding-bottom: 100px;
+    
 }
 .prizes-heading{
     font-size:2.8rem;
     font-weight: 600;
 }
 .prizes-content{
-    font-size:1.7rem;
+    font-size:1.4rem;
     font-weight: normal;
 }
 
@@ -26,7 +28,7 @@
         font-weight: 600;
     }
     .prizes-content{
-        font-size:1rem;
+        font-size:1.2rem;
         font-weight: normal;
     }
     
