--- a/src/components/LandingPage/Brand/Brand.css
+++ b/src/components/LandingPage/Brand/Brand.css
@@ -28,6 +28,9 @@
     margin : 0;
 }
 
+#brand-img-bigger {
+    display: none;
+}
 
 @media screen and (max-width : 1359px) {
     #brand-img {
@@ -38,101 +41,56 @@
         width : auto;
         margin : 0;
     }
+    .brand-content {
+        font-size: 1.8rem;
+    }
 }
 
 @media screen and (max-width : 1185px) {
     .brand-content{
         padding:4vw 8vw;
         width:70vw;
-        font-size:1.3rem;
+        font-size:1.6rem;
     }
     .brand-head{
         font-size: 4rem;
         font-weight: bolder;
         line-height: normal;
     }
-}
-
-@media screen and (max-width : 965px) {
-    .brand-content{
-        padding:4vw 8vw;
-        width:75vw;
-        font-size:1.2rem;
-    }
-    .brand-head{
-        font-size: 3.5rem;
-        font-weight: bolder;
-        line-height: normal;
-    }
-    
-}
-
-@media screen and (max-width : 860px) {
     #brand-img {
-        top : 70px;
-        right : -120px;
-        height : 110vh;
+        position: absolute;
+        top : 47px;
+        right : -70px;
+        height : 115vh;
         width : auto;
         margin : 0;
     }
-    .brand-content{
-        padding:4vw 8vw;
-        width:80vw;
-        font-size:1.25rem;
-    }
-    .brand-head{
-        font-size: 3.1rem;
-        font-weight: bolder;
-        line-height: normal;
-    }
 }
 
-@media screen and (max-width : 670px) {
-    .main-brand-div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    #brand-img {
-        position: relative;
-        height : 85vh;
-        right : 0;
-        top :-20px;
-    }
-    .brand-content {
-        width : fit-content;
-        padding : 10px 20px;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        align-items: center;
-        flex-direction: column;
-        font-size: 1.45rem;
-    }
-}
-
-@media screen and (max-width : 530px) {
-    .brand-head {
-        font-size: 2.5rem;
-    }
-    .brand-content {
-        font-size: 1.35rem;
-    }
-    #brand-img {
-        width : 100vw;
-        right : -40px;
-        height : auto;
-        position: absolute;
-        top : 40vh;
-    }
-}
-
-@media screen and (max-width : 530px) and (max-height : 900px ) {
-    #brand-img {
-        width : 130vw;
-        right : -40px;
-        height : auto;
-        position: absolute;
-        top : 50vh;
-    }
+@media screen and (max-width : 1010px) {
+   #brand-img {
+       display: none;
+   }
+   #brand-img-bigger {
+       display: block;
+       height : 130vh;
+       margin-bottom: 20px;
+       width: auto;
+   }
+   .main-brand-div {
+       display: flex;
+       flex-direction: column;
+       justify-content: flex-start;
+       align-items: center;
+   }
+   .brand-head {
+       text-align: center;
+       font-size: 3rem;
+   }
+   .brand-content {
+       font-size: 1.5rem;
+       width : auto;
+       max-width: 90vw;
+       text-align: center;
+   }
 }
