--- a/src/components/LandingPage/Brand/Brand.css
+++ b/src/components/LandingPage/Brand/Brand.css
@@ -8,7 +8,8 @@
     overflow-x: hidden;
 }
 .brand-content{
-    padding:4vw 8vw;
+    padding-top : 30px;
+    padding-left : 50px;
     width:70vw;
     font-size:1.5rem;
 }
@@ -48,7 +49,6 @@
 
 @media screen and (max-width : 1185px) {
     .brand-content{
-        padding:4vw 8vw;
         width:70vw;
         font-size:1.6rem;
     }
@@ -73,9 +73,9 @@
    }
    #brand-img-bigger {
        display: block;
-       height : 130vh;
-       margin-bottom: 20px;
-       width: auto;
+       position : absolute;
+       width: 600px;
+       top : 30vh;
    }
    .main-brand-div {
        display: flex;
@@ -85,12 +85,43 @@
    }
    .brand-head {
        text-align: center;
-       font-size: 3rem;
+       font-size: 2.5rem;
    }
    .brand-content {
        font-size: 1.5rem;
        width : auto;
        max-width: 90vw;
        text-align: center;
+       padding-top : 20px;
+       padding-left : 0;
    }
+}
+
+@media screen and (max-width : 620px) {
+    .brand-head {
+        text-align: center;
+        font-size: 2.2rem;
+    }
+    .brand-content {
+        font-size: 1.3rem;
+        width : auto;
+        max-width: 90vw;
+        text-align: center;
+        padding-top : 20px;
+        padding-left : 0;
+        line-height: normal;
+    }
+    #brand-img-bigger {
+        width: 620px;
+        right : 0.5vw;
+        top : 30vh;
+    }
+}
+
+@media screen and (max-width : 361px) and (max-height : 660px) {
+    #brand-img-bigger {
+        width: 400px;
+        right : 0.5vw;
+        top : 40vh;
+    }
 }
