--- a/src/components/Flashback/Flashback.css
+++ b/src/components/Flashback/Flashback.css
@@ -29,8 +29,8 @@
     align-items: center;
     width : 35vw;
     padding-top : 30px;
-    padding-left : 30px;
-    padding-right: 30px;
+    padding-left : 40px;
+    padding-right: 40px;
 }
 
 #Flashback__leftcontainer h4 {
@@ -40,7 +40,8 @@
 
 #Flashback__leftcontainer p {
     font-size: 1.1rem;
-    margin-top: 30px;
+    margin-top: 55px;
+    margin-bottom: 55px;
     font-weight: normal;
 }
 
@@ -85,6 +86,11 @@
         width : 100vw;
         padding : 0;
         margin: 0;
+    }
+    
+    #Flashback__leftcontainer p {
+        margin-top: 10px;
+        margin-bottom: 30px;
     }
     #Flashback__leftcontainer h4, #Flashback__leftcontainer p{
         padding : 13px 15px;
