--- a/src/components/LandingScreen/Event/EventBanner.css
+++ b/src/components/LandingScreen/Event/EventBanner.css
@@ -24,8 +24,8 @@
 
 #EventCarousel__item .red-allcaps {
     color: #FB2022;
-    font-size: 0.8rem;
-    font-weight: 300;
+    font-size: 1.15rem;
+    font-weight: normal;
 }
 
 #EventCarousel__item .img-arr-img-tl {
