--- a/src/components/LandingScreen/Faq/Faq.css
+++ b/src/components/LandingScreen/Faq/Faq.css
@@ -31,10 +31,14 @@
 .question{
     height:fit-content;
     margin: auto;  
+    font-size: 1.1rem;
+    font-weight:500;
 }
 .answer{
     padding: 2.5vh;
-    font-weight: 300;
+    font-size: 1.05rem;
+    font-weight: normal;
+    opacity: 0.9;
 }
 .social{
     width: 30px;
@@ -44,10 +48,25 @@
     width: 1.2rem;
     float: right;
 }
+#FAQs .btn {
+    outline : none ;
+    border : none ;
+}
+#FAQs .btn:focus {
+    outline : none !important;
+    border : none !important;
+    box-shadow: 0px 0px 0px 0px;
+}
 .contact-btn{
     background-color: black;
     color:white;
     bottom:2px;
-    font-weight: bold;
-    font-size: 1.4vw ;
+    font-weight: 600 !important;
+    font-size: 1rem !important ;
+    border : 1px solid black !important;
+    padding : 5px 10px;
+}
+.contact-btn:hover {
+    border : 1px solid black !important;
+    box-shadow : 0px 0px 3px 1px rgb(0,0,0,0.5) !important;
 }
