--- a/src/components/LandingScreen/Flashback/Flashback.css
+++ b/src/components/LandingScreen/Flashback/Flashback.css
@@ -28,7 +28,7 @@
     flex-direction : column;
     align-items: center;
     width : 35vw;
-    padding-top : 60px;
+    padding-top : 100px;
     padding-left : 40px;
     padding-right: 40px;
 }
@@ -40,8 +40,8 @@
 
 #Flashback__leftcontainer p {
     font-size: 1.1rem;
-    margin-top: 55px;
-    margin-bottom: 55px;
+    margin-top: 80px;
+    margin-bottom: 90px;
     font-weight: normal;
 }
 
@@ -67,7 +67,7 @@
 }
 #Flashback__rightcontainermobile img {
     margin : 0;
-    width : 100vw;
+    width : 90%;
     height : auto;
 }
 @media screen and (max-width : 765px) {
@@ -76,6 +76,7 @@
     }
     #Flashback__rightcontainermobile {
         display: flex;
+        margin-bottom: 20px;
     }
     #Flashback__container {
         flex-direction: column;
@@ -84,14 +85,16 @@
     }
     #Flashback__leftcontainer {
         width : 100vw;
-        padding : 0;
+        padding : 0 20px;
         margin: 0;
-        padding-top : 60px;
+        padding-top : 80px;
     }
-    
+    #Flashback__rightcontainermobile {
+        padding : 0 20px;
+    }
     #Flashback__leftcontainer p {
-        margin-top: 10px;
-        margin-bottom: 30px;
+        margin-top:60px;
+        margin-bottom: 90px;
     }
     #Flashback__leftcontainer h4, #Flashback__leftcontainer p{
         padding : 13px 15px;
